--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <button onclick="calcular('valor', 1)" type="button" id="b_1" class="btn btn-dark btn-lg font-weight-light">1</button>
               <button onclick="calcular('valor', 2)" type="button" id="b_2" class="btn btn-dark btn-lg font-weight-light">2</button>
               <button onclick="calcular('valor', 3)" type="button" id="b_3" class="btn btn-dark btn-lg font-weight-light">3</button>
-              <button onclick="calcular('acao', '=')" type="button" id="b_equal" class="btn btn-dark btn-lg enter">=</button>
+              <button onclick="calcular('acao', '=')" type="button" id="b_equal" class="btn btn-lg enter">=</button>
             </div>
 
             <div class="row" style="margin-top: -60px">
